--- a/prjTest/styles/mainstyles.css
+++ b/prjTest/styles/mainstyles.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i');
+body
+{
+    margin: 0;
+    padding: 0;
+    background: rgb(223, 223, 223);
+    height: 100vh;
+    overflow: scroll;
+    padding-bottom:58px; /* height of the footer */
+    font-family: "Jost", sans-serif;
+}
+
 .topnav
 {
     background-color: #333;
@@ -10,13 +22,13 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding:14px
-
+    padding:14px;
 }
 .header
 {
     grid-area: header;
-    background-color: #f1f1f1;
+    background: rgb(51,51,51);
+    background: linear-gradient(183deg, rgba(51,51,51,1) 0%, rgba(241,241,241,1) 100%);
     padding: 30px;
     text-align: center;
     font-size: 35px;
