--- a/prjTest/styles/profile_authentication_styles.css
+++ b/prjTest/styles/profile_authentication_styles.css
@@ -1,32 +1,51 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i');
+
 body{
     margin: 0;
     padding: 0;
-    font-family: montserrat;
     background: rgb(223, 223, 223);
     height: 100vh;
     overflow: scroll;
     padding-bottom:58px; /* height of the footer */
-}
+    font-family: "Jost", sans-serif;
 
+}
 
 .center{
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
     background: white;
     border-radius: 10px;
+    padding: 10px;
 }
 .centerProfile{
     position: relative;
-    top: 30%;
-    left: 30%;
+    padding: 20px;
+    margin-top: 75px;
+    top: 60%;
+    left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
     background: rgb(255, 255, 255);
     border-radius: 10px;
 }
+
+.centerProfileEdit
+{
+    position: relative;
+    padding: 20px;
+    margin-top: 225px;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+}
+
 .centerProfile h1{
     text-align: center;
     padding: 0 0 10px 0;
@@ -121,18 +140,13 @@ form .txt_field{
     outline: none;
 } */
 .button{
-    width: 80%;
-    height: 60px;
+    color: #fff;
+    background-color: gray;
     border: 1px solid;
-    background: #727272;
-    border-radius: 25px;
-    font-size: 18px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-
+    padding: 10px 10px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    position: relative;
 }
 
 input [type="submit"]:hover{
@@ -178,7 +192,8 @@ input [type="submit"]:hover{
 .header
 {
     grid-area: header;
-    background-color: #f1f1f1;
+    background: rgb(51,51,51);
+    background: linear-gradient(183deg, rgba(51,51,51,1) 0%, rgba(241,241,241,1) 100%);
     padding: 10px;
     text-align: center;
     font-size: 35px;
@@ -201,7 +216,6 @@ input [type="submit"]:hover{
 .navigation a
 {
     float: left;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     display: block;
     color: #f2f2f2;
     text-align: center;
