--- a/prjTest/styles/mainstyles.css
+++ b/prjTest/styles/mainstyles.css
@@ -5,9 +5,10 @@ body
     padding: 0;
     background: rgb(223, 223, 223);
     height: 100vh;
-    overflow: scroll;
+    overflow: hidden;
     padding-bottom:58px; /* height of the footer */
     font-family: "Jost", sans-serif;
+    
 }
 
 .topnav
@@ -85,4 +86,8 @@ div.movietags
     width: 150px;
     height: 200px;
     margin: 1.66%;
+}
+
+#dp{
+margin-top: -40px;
 }
