--- a/Website/styles/mainstyles.css
+++ b/Website/styles/mainstyles.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i');
 body
 {
-    margin: 0;
+    margin: auto;
     padding: 0;
     background: rgb(223, 223, 223);
     height: 100vh;
-    overflow: hidden;
     padding-bottom:58px; /* height of the footer */
     font-family: "Jost", sans-serif;
     
