Schedule Page - WIP

--- a/prjTest/styles/mainstyles.css
+++ b/prjTest/styles/mainstyles.css
@@ -88,6 +88,60 @@ div.movietags
     margin: 1.66%;
 }
 
-#dp{
-margin-top: -40px;
+.styled-table {
+    border-collapse: collapse;
+    border: 2px solid gray;
+    margin: auto;
+    font-weight: 400;
+    font-size: 1.5em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
 }
+
+.styled-table thead tr {
+    background-color:gray;
+    color:whitesmoke;
+    text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid gray;
+}
+
+#DayTime:hover
+{
+    background-color: gray;
+}
+
+.onClick
+{
+    background:green !important;
+}
+
+h1 {
+    text-align:center;
+}
+
+.btn {
+    background-color:green;
+    border: 2px solid gray;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 12px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+
+  }
