--- a/prjTest/styles/mainstyles.css
+++ b/prjTest/styles/mainstyles.css
@@ -98,6 +98,20 @@ div.movietags
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
 }
 
+.styled-table-employee{
+    border-collapse: collapse;
+    border: 2px solid gray;
+    margin: auto;
+    width: 98%;
+    font-weight: 400;
+    font-size: 1.5em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+}
+
+
+
 .styled-table thead tr {
     background-color:gray;
     color:whitesmoke;
